<resources>
    <string name="app_name">Weconomy Experience</string>
    <string name="hub_title">Beschikbare Spellen</string>
    <string name="start_new_game">start nieuw spel</string>
    <string name="goals_text">%1$d goals, %2$d completed</string>
    <string name="day_text">Day %d</string>
    <string name="goal_dialog_title">Goal list</string>
    <string name="create_goal_dialog_title">Create a new goal</string>
    <string name="create_game_dialog_title">Create a new game</string>
    <string name="ok">OK</string>
    <string name="edit_goal_dialog_title">Edit this goal</string>
    <string name="info_text">The weconomy experience is a simulation of the new economy that is emerging at the moment. Click to read more.</string>
    <string name="about_text">This app is made by Guts4Roses in collaboration with Teachwithapps. Various icons from flaticon.com.</string>
    <string name="guts4roses_link">http://guts4roses.org</string>
    <string name="teachwithapps_link">http://teachwithapps.com</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="about_this_app">About this app</string>
    <string name="app_version_info">Version %1$s</string>
    <string name="explanation_link">http://guts4roses.org/simulation</string>
    <string name="cancel">CANCEL</string>
    <string name="edit_scheduled_instruction_dialog_title">Edit this instruction</string>
    <string name="labour_select_player">Select a player to assign for labour</string>
    <string name="claim_select_player">Select a player to claim output for</string>
    <string name="select_instruction">Select Instruction</string>
    <string name="enter_game_title">Enter this game\'s title</string>
    <string name="icons_link">https://flaticon.com</string>
    <string name="view_goals">Currently selected goals</string>
    <string name="app_too_old">The app is too old for this game. Please visit the Playstore to update the app</string>
    <string name="app_too_old_title">App is too old</string>
    <string name="select_goal">Select a goal</string>
    <string name="set_goal_discovery">Set discovered goals</string>
    <string name="done">DONE</string>
    <string name="game_too_old_title">Game is too old</string>
    <string name="game_too_old">The game is too old for this app. Please join another game.</string>
    <string name="add_goal">Add goal</string>
    <string name="operation_key">operation_key</string>
    <string name="payload_key">payload_key</string>
    <string name="sign_out">Sign out</string>
    <string name="enable_admin">Enable admin</string>
    <string name="wifi_off">The internet connection appears to be offline. Enable your internet and restart the app.</string>
    <string name="wifi_off_title">No internet</string>
</resources>
