<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_view"
    android:layout_width="@dimen/drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/how_does_it_work"
        android:textColor="@color/white_blue"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_title"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/info_text"
        android:textColor="@color/white_blue"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/about_this_app"
        android:textColor="@color/white_blue"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_title"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/about_text"
        android:textColor="@color/white_blue"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/guts4roses_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_text"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/guts4roses_link"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/teachwithapps_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guts4roses_link"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/teachwithapps_link"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/icons_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/teachwithapps_link"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/icons_link"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/app_version_info"
        android:textColor="@color/white_blue"
        android:textSize="10sp" />

</RelativeLayout>